qwikgame/static/css/qwik.css
/* ... */
/* match chat */
div.chat_bubble { align-items: start; background-color: var(--color-stencil); border-radius: 2rem; gap: 1rem; max-width: 66%; min-width: 10rem; padding: 1rem; }
div.chat_bubble .row { flex-direction: row; gap: 1rem; justify-content: space-between; }
div.chat_bubble .text { }
div.chat_bubble .row:has(time) { margin-left: auto }
div.chat_input { flex: 2; }
div.chat_input div { align-items: center; flex-direction: row; flex-grow: 1; padding: 0; }



label p { flex: auto; }
label.hidden { display: none }
label.large { border: 1px solid var(--color-backdrop); padding: 1rem; width: 100% }
label.switch { display: inline-block; height: 2.6rem; margin-right: 3rem; position: relative; width: 4rem }
label.switch input { display: none }
label.toggle input { position: absolute; opacity: 0; cursor: pointer; height: 0; width: 0 }

/* --- Inputs --- */
div:has(> input) { align-self: stretch; justify-content: stretch; }
input[type=checkbox] { margin: 0 1rem 0 1rem; }
input[type=submit] { cursor: pointer; flex: 0 0 auto; flex-direction: row; gap: 0.3rem; justify-content: center; text-align: center }
input[type=text] { align-self: stretch; flex: 1 1 auto; font-size: inherit; padding: 0 0.5rem; }
input.btn { position: relative; }
input.strength { display: flex; flex: 1 1 100%; height: 2rem; margin: 1rem 0 1rem 0; width: 100% }
input.disabled { background-color: var(--color-disabled-bkg); color: var(--color-disabled-txt); }
div:has(> textarea) { width: 100%; }
textarea { border-color: var(--color-grey-c); width: 100%; }

/* Over-ride std checkbox */
input[type=checkbox] { display: none; }
label:has(input[type=checkbox])::before { content: ''; border: 1px solid var(--color-grey-c); color: #f3f3f3; display: inline-block; font-size: 1.8rem; height: 1.2rem; line-height: 1rem; margin: .2rem .4rem .2rem 0; text-align: center; vertical-align: middle; width: 1.2rem; }
label:has(input[type=checkbox]:checked)::before { color: var(--color-qwik); content: "\2714"; }

/* Over-ride std radio */
input[type=radio] { display: none; }
label:has(input[type=radio])::before { content: ''; border: 1px solid var(--color-grey-c); border-radius: 50%; color: #f3f3f3; display: inline-block; font-size: 2rem; height: 1.2rem; line-height: 1rem; margin: .2rem .4rem .2rem 0; text-align: center; width: 1.2rem; vertical-align: middle; }
label:has(input[type=radio]:checked)::before { content: "\2022"; color: var(--color-qwik); content: "\2714"; }

/* range slider */
input[type=range] { align-self: stretch; accent-color: var(--color-qwik); display: flex; flex: 1 1 100%; height: 2rem; margin: 1rem 3rem; }
div.range_options { align-self: stretch; flex-direction: row; gap: 1rem; justify-content: space-between; padding: 1rem 0 0 0; }
div.range_options .option { text-align: center }
div.select_range { align-self: stretch; }
div.slider { background-color: var(--color-grey-c); border-radius: 2.5rem; bottom: 0; cursor: pointer; left: 0; position: absolute; right: 0; top: 0; transition: .4s; width: 5.6rem; }
div.slider:before { aspect-ratio: 1/1; background-color: #fff; border-radius: 50%; bottom: 0.2rem; content: ""; left: 0.2rem; position: absolute; transition: .4s; width: 2.2rem }
div.slide_labels { gap: 1rem; justify-content: space-between; width: 100% }
div.slide_label { text-align: center }

/* --- Buttons --- */
.btn { align-items: center; border: 1px solid var(--color-grey-3); border-radius: var(--dim-ease); color: black; cursor: pointer; display: flex; flex-direction: row; font-weight: 550; gap: 0.3rem; justify-content: center; margin: 0.3rem; min-height: 3rem; padding: 1.25rem 1.5rem; text-decoration: none; text-overflow: ellipsis; }

/* hide custom checkbox/radio behaviour for label.btn (used extensively) */
label.btn:has(input[type=checkbox])::before { content: none; }
label.btn:has(input[type=radio])::before { content: none; }

/*.btn:focus { outline: 0.2rem solid #fffb00; }*/
.btn:active { box-shadow: inset 1px 2px 5px #777; transform: translateY(1px); }
.btn:active:has(input:disabled) { box-shadow: none; transform: none; }
.btn:has(input.hidden) { display: none }
.btn.primary { align-self: stretch; background-color: var(--color-qwik); border-color: var(--color-qwik); color: var(--color-grey-3); margin-left: 0; margin-right: 0; }
.btn.primary:active { background-color: var(--color-active-1); border-color: var(--color-active-1); }
.btn.primary:has(input:checked) { }
.btn.primary:has(input:disabled) { background-color: var(--color-disabled-bkg); border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); cursor: default; }
.btn.primary:disabled { background-color: var(--color-disabled-bkg); border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.secondary { border-color: var(--color-grey-3); color: var(--color-grey-3); }
.btn.secondary:active { border-color: var(--color-active-2) }
.btn.secondary:disabled { border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.secondary:has(input:checked) { background-color: var(--color-checked); border-color: var(--color-checked); box-shadow: inset 1px 2px 5px #777; transform: translateY(1px); }
.btn.secondary:has(input:disabled) { border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
.btn.tertiary { align-content: center; border-color: var(--color-backdrop); color: var(--color-blue); display: block; min-height: 2rem; padding: 0.3rem; text-decoration: underline; }
.btn.tertiary.menu { text-decoration: none; }
.btn.tertiary:active { background-color: var(--color-active-2); border-color: var(--color-active-2); }
.btn.tertiary:has(input:checked) { }
.btn.tertiary:has(input:disabled) { }
.btn.special1 { border-color: var(--color-qwik); color: var(--color-qwik); font-weight: bold; }
.btn.special1.mobile { background-color: var(--color-qwik); border-radius: 50%; bottom: 4rem; color: var(--color-stencil); height: 6rem; position: fixed; right: 2rem; width: 6rem; z-index: 10; }
/* ... */

